More test to cubic spline

--- a/equation/cubic_spline.ipynb
+++ b/equation/cubic_spline.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -124,14 +124,15 @@
        "⎣             h                    h     ⎦"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "laplacian_func = lambda func: simplify(diff(func, r))\n",
-    "list(map(laplacian_func, gradient))"
+    "lacian_func = lambda func: simplify(diff(func, r))\n",
+    "lapcian = list(map(lacian_func, gradient))\n",
+    "lapcian"
    ]
   },
   {
@@ -168,7 +169,51 @@
     "# Assume h == 1\n",
     "a = [(2/10*i, (func_a/volume).subs([(r,2/10*i)]).subs(s)) for i in range(11)]\n",
     "b = [(2/10*i, (func_b/volume).subs([(r,2/10*i)]).subs(s)) for i in range(11)]\n",
-    "a,b"
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.0, 0), (0.2, -0.162338041953733), (0.4, -0.267380304394384), (0.6000000000000001, -0.315126787321953), (0.8, -0.305577490736439), (1.0, -0.238732414637843), (1.2, -0.152788745368220), (1.4, -0.0859436692696235), (1.6, -0.0381971863420549), (1.8, -0.00954929658551372)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [(h, 1), (pi, math.pi)]\n",
+    "\n",
+    "# Assume h == 1\n",
+    "a = [(2/10*i, (gradient[0]/volume).subs([(r,2/10*i)]).subs(s)) for i in range(5)]\n",
+    "b = [(2/10*i+1, (gradient[1]/volume).subs([(r,2/10*i+1)]).subs(s)) for i in range(5)]\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.0, -0.954929658551372), (0.2, -0.668450760985960), (0.4, -0.381971863420549), (0.6000000000000001, -0.0954929658551371), (0.8, 0.190985931710274), (1.0, 0.477464829275686), (1.2, 0.381971863420549), (1.4, 0.286478897565412), (1.6, 0.190985931710274), (1.8, 0.0954929658551372)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [(h, 1), (pi, math.pi)]\n",
+    "\n",
+    "# Assume h == 1\n",
+    "a = [(2/10*i, (lapcian[0]/volume).subs([(r,2/10*i)]).subs(s)) for i in range(5)]\n",
+    "b = [(2/10*i+1, (lapcian[1]/volume).subs([(r,2/10*i+1)]).subs(s)) for i in range(5)]\n",
+    "print(a+b)"
    ]
   },
   {
